Further fixes to Google Maps iframe styling (much better on mobile).

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -475,17 +475,20 @@ a.contact-phone {
 
 div#flex-map {
   height: 0;
-  padding-top: 30px;
-  padding-bottom: 56.25%;
-  margin-bottom: 50px;
+  padding-bottom: 350px;
+  margin-bottom: 30px;
   
   overflow: hidden;
   text-align: center;
 }
 
 div#flex-map iframe {
-  width: 80%;
-  height: 100%;
+  width: 70%;
+  height: 350px;
+
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
 }
 
 /*******************/
